# simple-script-compiler

./: Cargo.toml  LICENSE  README.md
.githooks/: pre-commit  pre-commit.ps1
.github/workflows/: ci.yml  rust.yml
scripts/: install-git-hooks.ps1  install-git-hooks.sh
src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: integration_tests.rs  interpreter_tests.rs  lexer_tests.rs  parser_tests.rs
